fix(theme-classic): fix docs layout issue (#8707)
fix issue reported in https://github.com/facebook/docusaurus/issues/8369#issuecomment-1426838764

--- a/packages/docusaurus-theme-classic/src/theme/DocPage/Layout/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/DocPage/Layout/styles.module.css
@@ -8,6 +8,7 @@
 .docPage {
   display: flex;
   width: 100%;
+  flex: 1 0;
 }
 
 .docsWrapper {
